@@ -28,4 +28,6 @@ fi
 # To get one instance, use server mode
 OPT="-server 4918"
 
+# Java 9 & 10 require '--add-modules=java.corba'
+# For Java 11, that is not available and instead a new pvAccess lib is needed.
 java --add-modules=java.corba -jar $JAR $OPT "$@" &
